--- a/nasu/package.json
+++ b/nasu/package.json
@@ -6,7 +6,7 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/vite": "^4.0.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
@@ -14,7 +14,13 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
+        "sass": "^1.86.3",
         "tailwindcss": "^3.1.0",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "@tailwindcss/typography": "^0.5.16",
+        "bootstrap": "^5.3.5"
     }
 }
