confirm mail and maybe verification

--- a/nasu/.env
+++ b/nasu/.env
@@ -47,14 +47,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
+# MAIL_MAILER=log
+# MAIL_SCHEME=null
+# MAIL_HOST=127.0.0.1
+# MAIL_PORT=2525
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_USERNAME=f7e5464371ea96  # Get from Mailtrap.io
+MAIL_PASSWORD=dcb14daab3ecf1  # Get from Mailtrap.io
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="no-reply@nasu.com"
+MAIL_FROM_NAME="nasu"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
