--- a/nasu/.env
+++ b/nasu/.env
@@ -59,8 +59,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=f7e5464371ea96  # Get from Mailtrap.io
-MAIL_PASSWORD=dcb14daab3ecf1  # Get from Mailtrap.io
+MAIL_USERNAME=null
+MAIL_PASSWORD=null 
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="no-reply@nasu.com"
 MAIL_FROM_NAME="nasu"
